# photo-tagging

./: .gitignore  .pylintrc  ImageSegmentation.py  README.md  pyproject.toml  requirements.txt  test.db
src/: CaptionTagging.py  CaptionTags.py  ImageCaptionGenerate.py  ImageKeywords.py  ImageReverseGeoTagging.py  ImageToReverseGeoTagging.py  ImageToText.py  ImageUtils.py  LoggerUtils.py  ReverseGeoTagging.py  TextTokenClassification.py  app.py  app2.py  app_reverse_geotagging.py  generate_keyword_list.py  helloworld.py  img-caption-compare.py  img-caption-gpt2.py  img-compare-captioning.py  img-obj-detection.py  main.py  reversegeotagging.py  translation.py
src/Logger/: LoggerUtils.py  logger_utils.py
src/Playground/: dop-file-reader.py  img-caption-claudeai.py  img-caption-compare.py  img-caption-paligemma-cococap-448.py  img-classification-paligemma.py  img-feature-extraction.py  img-save-exiff-keyword-list.py  img-zeroshoot-cliplarge.py  pipeline.py  text-multiprocessing.py  text-phi3.py  text-tokenclassification-gliner.py
src/Utils/: Crud.py  Db.py  DbUtils.py  ImageUtils.py  Images.py  LoggerUtils.py  TextTokenClassificationBert.py  TextTokenClassificationGliner.py  __init__.py
src/__tests__/: test_ImageToReverseGeoTagging.py  test_TextTokenClassificationBert.py  test_image_to_reverse_geo_tagging.py  test_text_token_classification_bert.py
src/models/: AI.py  AIGen.py  AIGenBert.py  AIGenPaliGemma.py  AIGenPaligemma.py  AIGenPipeline.py  AIGenPretrained.py  AIGenTokenClassification.py  AIGenTokenClassificationBert.py  Base.py  Caption.py  CrudBase.py  DBCRUD.py  ExifFileCRUD.py  ImageCRUD.py  Location.py  Photo.py  PhotoKeywordContext.py  ReverseGeotagging.py  ReverseGeotaggingPhotolab.py  ReverseGeotaggingXMP.py  StrategyBase.py  StrategyCalculateKeywordList.py  StrategyDataFromSidecarFileDop.py  StrategyGenerateKeywordList.py  StrategySaveKeywordOnlyDB.py  StrategySaveKeywordToFile.py  Token.py
src/models_/: AI.py  BaseOrm.py  Caption.py  CrudBase.py  Location.py  Photo.py  Token.py
src/services/: StrategyBaseV2.py  StrategyImageGenerateImageDescription.py
src/tests/: test_AIGenPaliGemma.py  test_AIGenPipeline.py  test_AIGenPretrained.py  test_AIGenTokenClassification.py  test_AIGenTokenClassificationBert.py  test_ReverseGeotagging.py  test_StategyCalculateKeywodList.py  test_StategyGenerateKeywordList.py  test_image_to_keyword_list.py  test_image_to_reverse_geo_tagging.py  test_image_to_text.py  test_text_token_classification_bert.py
src/util/: db_utils.py  (+1 more)
tests/: conftest.py  test_AIGenPaliGemma.py  test_AIGenPipeline.py  test_AIGenPretrained.py  test_ExifFileCRUD.py  test_PhotoTaggingProcessor.py  test_ReverseGeotagging.py  test_ReverseGeotaggingXMP.py  test_StategyGenerateKeywordList.py  test_service_strategy_image_gen_description.py
(+20 files in other folders)
